run nested routes before destroy

--- a/angular/test/test-app/src/app/nested-outlet-page2/nested-outlet-page2.component.html
+++ b/angular/test/test-app/src/app/nested-outlet-page2/nested-outlet-page2.component.html
@@ -1,6 +1,9 @@
 <ion-content>
     <h1>Nested page 2</h1>
     <p>
+      <ion-button routerLink="/" id="goto-home">Go To Home</ion-button>
       <ion-button routerLink="/nested-outlet/page">Go To FIRST</ion-button>
+<!--      <ion-button routerLink="/nested-outlet/page2" id="goto-nested-page2" >Go To SECOND</ion-button>-->
+      <ion-button routerLink="/view-child" id="goto-view-child">Go To Child</ion-button>
     </p>
   </ion-content>
