--- a/angular/test/test-app/src/app/home-page/home-page.component.html
+++ b/angular/test/test-app/src/app/home-page/home-page.component.html
@@ -7,6 +7,34 @@
   </ion-header>
   <ion-content>
     <ion-list>
+
+      <ion-item routerLink="/view-child">
+        <ion-label>
+          Go To Child
+        </ion-label>
+      </ion-item>
+      <ion-item routerLink="/nested-outlet/page">
+        <ion-label>
+          Nested ion-router-outlet
+        </ion-label>
+      </ion-item>
+      <ion-item routerLink="/nested-outlet/page2">
+        <ion-label>
+          Nested ion-router-outlet 2
+        </ion-label>
+      </ion-item>
+      <ion-item routerLink="/tabs">
+        <ion-label>
+          Tabs test
+        </ion-label>
+      </ion-item>
+<!--      <ion-item  [routerLink]="['/nested-outlet', { outlets: { secondary: ['page2'] } }]">-->
+<!--        <ion-label>-->
+<!--          Nested ion-router-outlet 2 secondary outlet-->
+<!--        </ion-label>-->
+<!--      </ion-item>-->
+
+<!--
       <ion-item routerLink="/alerts" [routerAnimation]="routerAnimation">
         <ion-label>
           Alerts test
@@ -62,5 +90,6 @@
           Providers
         </ion-label>
       </ion-item>
+-->
     </ion-list>
   </ion-content>
