--- a/angular/test/test-app/src/app/nested-outlet-page/nested-outlet-page.component.html
+++ b/angular/test/test-app/src/app/nested-outlet-page/nested-outlet-page.component.html
@@ -1,7 +1,9 @@
 <ion-content>
   <h1>Nested page 1</h1>
   <p>
-    <ion-button routerLink="/tabs" id="goto-tabs">Go To Tabs</ion-button>
-    <ion-button routerLink="/nested-outlet/page2" id="goto-nested-page2">Go To SECOND</ion-button>
+    <ion-button routerLink="/" id="goto-home">Go To Home</ion-button>
+<!--    <ion-button routerLink="/nested-outlet/page">Go To FIRST</ion-button>-->
+    <ion-button routerLink="/nested-outlet/page2" id="goto-nested-page2" >Go To SECOND</ion-button>
+    <ion-button routerLink="/view-child" id="goto-view-child">Go To Child</ion-button>
   </p>
 </ion-content>
