--- a/angular/test/test-app/src/app/view-child/view-child.component.html
+++ b/angular/test/test-app/src/app/view-child/view-child.component.html
@@ -1,20 +1,27 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>
       ViewChild() test
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ion-slides>
-    <ion-slide #slide>
-        <ion-button id="color-button">Hello! it's a button</ion-button>
-        <div #div id="tabs-result"></div>
-        <ion-tabs>
-        </ion-tabs>
-    </ion-slide>
-    <ion-slide>
-      <h1>Second slide</h1>
-    </ion-slide>
-  </ion-slides>
+  <ion-button routerLink="/" id="goto-home">Go To Home</ion-button>
+  <ion-button routerLink="/nested-outlet/page">Go To FIRST</ion-button>
+  <ion-button routerLink="/nested-outlet/page2" id="goto-nested-page2" >Go To SECOND</ion-button>
+
+<!--  <ion-slides>-->
+<!--    <ion-slide #slide>-->
+<!--        <ion-button id="color-button">Hello! it's a button</ion-button>-->
+<!--        <div #div id="tabs-result"></div>-->
+<!--        <ion-tabs>-->
+<!--        </ion-tabs>-->
+<!--    </ion-slide>-->
+<!--    <ion-slide>-->
+<!--      <h1>Second slide</h1>-->
+<!--    </ion-slide>-->
+<!--  </ion-slides>-->
 </ion-content>
