--- a/angular/test/test-app/src/app/nested-outlet/nested-outlet.component.html
+++ b/angular/test/test-app/src/app/nested-outlet/nested-outlet.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-title>
       NESTED OUTLET
@@ -9,5 +9,6 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-router-outlet></ion-router-outlet>
+<!--  <ion-router-outlet name="secondary"></ion-router-outlet>-->
+  <ion-router-outlet #outlet="outlet"></ion-router-outlet>
 </ion-content>
